--- a/settings/project.json
+++ b/settings/project.json
@@ -1,10 +1,34 @@
 {
   "group-list": [
-    "default"
+    "default",
+    "player",
+    "enemy",
+    "sc"
   ],
   "collision-matrix": [
     [
+      true,
+      null,
+      null,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
       true
+    ],
+    [
+      false,
+      true,
+      false,
+      true
+    ],
+    [
+      false,
+      true,
+      true,
+      false
     ]
   ],
   "excluded-modules": [
